Update company URL to indicate it's no longer active

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                     <div class="item-header">
                         <div>
                             <span class="item-title">Co-Owner</span> | <span class="company-info">Captok | Full-time</span>
-                            <div class="company-url">https://captiontok.ai</div>
+                            <div class="company-url">https://captiontok.ai (No longer active)</div>
                         </div>
                         <div class="item-location-date">
                             <div>Fully online</div>
