--- a/index.html
+++ b/index.html
@@ -127,7 +127,9 @@
     </style>
 </head>
 <body>
-
+    <div style="text-align: center; margin-bottom: 20px;">
+        <img src="https://github.com/Humadating/ryanward.org/blob/main/New%20Project%20(3).webp?raw=true" alt="Ryan Ward" style="width: 100%; height: auto;">
+    </div>
     <div class="resume-container">
         <div class="header">
             <p class="name">Ryan Ward</p>
