Add favicon link to index.html
Added a favicon link to the head section.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ryan Ward - Resume</title>
+    <link rel="icon" href="https://github.com/Humadating/ryanward.org/blob/main/Pics/New%20Projectpol.png?raw=true">
     <style>
         body {
             font-family: Arial, sans-serif;
