Update Google Client ID in index.html

--- a/ai/index.html
+++ b/ai/index.html
@@ -262,7 +262,7 @@
             baseUrl: localStorage.getItem('rw_base_url') || 'https://api.openai.com/v1',
             apiKey: localStorage.getItem('rw_api_key') || '',
             model: localStorage.getItem('rw_model') || 'gpt-4o-mini',
-            googleClientId: localStorage.getItem('rw_google_client_id') || ''
+            googleClientId: localStorage.getItem('rw_google_client_id') || '760335422990-p5al7d0gldtacljsas5qlup434ubugok.apps.googleusercontent.com'
         };
 
         const state = {
