--- a/ai/index.html
+++ b/ai/index.html
@@ -72,7 +72,7 @@
     </div>
 
     <!-- Sidebar -->
-    <aside id="sidebar" class="transform -translate-x-full md:translate-x-0 transition-transform duration-300 fixed md:relative z-10 w-64 h-full bg-gray-50 border-r border-gray-200 flex flex-col shadow-lg md:shadow-none">
+    <aside id="sidebar" class="transform -translate-x-full md:translate-x-0 transition-transform duration-300 fixed md:relative z-40 w-64 h-full bg-gray-50 border-r border-gray-200 flex flex-col shadow-lg md:shadow-none">
         <!-- Sidebar Header with Back Link -->
         <div class="p-4 border-b border-gray-200 flex flex-col bg-white">
             <a href="https://ryanward.org" class="inline-flex items-center text-xs font-medium text-gray-500 hover:text-blue-600 transition-colors mb-3 w-fit group">
@@ -212,6 +212,20 @@
             </div>
         </div>
     </main>
+
+    <!-- Right Ad Sidebar -->
+    <aside class="hidden lg:flex w-64 h-full bg-gray-50 border-l border-gray-200 flex-col p-4 overflow-y-auto z-10 shrink-0">
+        <div class="w-full h-full flex flex-col gap-4">
+             <!-- Top Ad Slot -->
+             <div class="w-full bg-gray-200 rounded-lg h-[300px] flex items-center justify-center text-gray-400 text-sm font-medium border border-gray-300">
+                Ad Space
+             </div>
+             <!-- Bottom Ad Slot -->
+             <div class="w-full bg-gray-200 rounded-lg flex-1 flex items-center justify-center text-gray-400 text-sm font-medium border border-gray-300 min-h-[200px]">
+                Ad Space
+             </div>
+        </div>
+    </aside>
 
     <!-- Settings Modal -->
     <div id="settings-modal" class="fixed inset-0 z-50 flex items-center justify-center bg-black bg-opacity-50 hidden backdrop-blur-sm">
